Category controllers, services and repositories has been added.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,2 +1,5 @@
 <h1>Hello world!</h1>
 <h2>My name is Yana!</h2>
+
+<a href="/menu/dish_categories">Go to Dish</a>
+<a href="/menu/drink_categories">Go to Drink</a>
